# home_work_21.2

./: README.md  index.html  main.py  pyproject.toml
templates/: catalog.html  category.html  contacts.html
