[project]
name = "home-work-21-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Kazantsev A.A."}
]
license = {text = "free MIT RF"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "home_work_21"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)"
]
group = [
    "lint (>=1.2.1,<2.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "mypy (>=1.18.2,<2.0.0)"
]
